Need to test in prod

--- a/Notion/templates/Notion/include/_button_print.html
+++ b/Notion/templates/Notion/include/_button_print.html
@@ -3,7 +3,7 @@
 {%get_categories task_list as print_date%}
 {% if print_date != False %}
 
-<form action="{% url 'print' %}" class="m-auto" role="date" method="get">
+<form action="{% url 'print' %}" class="m-auto mb-5" role="date" method="get">
     <input type="hidden" name="date" value={{print_date}}>
     <button class="btn btn-outline-light shadow-lg rounded-4" type="submit">
         <lord-icon
@@ -21,7 +21,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css"/>
 <script>
     $(document).ready(function(){
-      var date_input=$('input[name="date"]'); //our date input has the name "date"
+      var date_input=$('input[name="date"]');
       var container=$('.bootstrap-iso form').length>0 ? $('.bootstrap-iso form').parent() : "body";
       var options={
         format: 'yyyy-mm-dd',
