add AJAX deacrivate button

--- a/Notion/templates/Notion/include/_button_deactivate.html
+++ b/Notion/templates/Notion/include/_button_deactivate.html
@@ -1,5 +1,6 @@
 {% load static %}
-<form class="mt-3" action="{% url 'deactivate' %}">
-    <input type="hidden" name="pk" value="{{task.pk}}">
-    <button class="btn btn-outline-dark shadow-lg rounded-4" type="submit">Выполнено</button>
-</form>
+<button class="m-auto mt-3 btn btn-outline-dark shadow-lg rounded-4" type="submit" id="deactivate_{{task.pk}}"
+  onclick="deactivate(this)">
+  <lord-icon src="{% static 'icons/approve.json' %}" trigger="hover" style="width:64px;height:64px">
+  </lord-icon>
+</button>
