--- a/templates/base.html
+++ b/templates/base.html
@@ -2,18 +2,46 @@
 {% load static %}
 
 <html lang="ru">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>
-            {% block title %}Главная страница{% endblock title %}
-        </title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    </head>
-    <body style="background-color: #D7CBF0;">
-        {% if request.user.is_authenticated %}{% include 'include/_navbar.html' %}{% endif %}
-        {% block container %}{% endblock %}
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-        <script src="{% static 'js/lordicon.json' %}"></script>
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>
+        {% block title %}Главная страница{% endblock title %}
+    </title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+</head>
+
+<body style="background-color: #D7CBF0;">
+    {% if request.user.is_authenticated %}{% include 'include/_navbar.html' %}{% endif %}
+    {% block container %}{% endblock %}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+        crossorigin="anonymous"></script>
+    <script type="text/javascript" src="{% static 'js/lordicon.js' %}"></script>
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
+    <script type="text/javascript">
+        function deactivate(obj) {
+            var id = obj.id.split('deactivate_')[1];
+            $.ajax({
+                method: "GET",
+                url: "{% url 'deactivate' %}",
+                data: {
+                    "pk": id,
+                },
+                success: function (data) {
+                    console.log(data);
+                },
+                error: function (er) {
+                    console.log(er);
+                }
+            });
+            var card = $(obj).parent();
+            card.remove();
+        }
+    </script>
+</body>
+
 </html>
