--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
     </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="shortcut icon" href="{%  static 'favicon.ico' %}">
 </head>
 
 <body style="background-color: #D7CBF0;">
