add title for pages

--- a/Notion/templates/Notion/home.html
+++ b/Notion/templates/Notion/home.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block title %}Задачи{% endblock title %}
 {% block container %}
 <div class="container">
     {% for task in task_list %}
