--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %} 
 {% load static %}
+{% block title %}Вход{% endblock title %}
 {% block container %}
 <link href="{% static 'css/signin.css' %}" rel="stylesheet">
 {% comment %} <link href="{% static 'bootstrap.min.css' %}" rel="stylesheet"> {% endcomment %}
