--- a/Notion/templates/Notion/add_typing.html
+++ b/Notion/templates/Notion/add_typing.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %} 
+{% block title %}Создать тип{% endblock title %}
 {% block container %}
 <div class="container">
 <div class="card p-3 shadow-lg mb-5 bg-body rounded-4">
